# libflame

./: .gitignore  AUTHORS  BUILD.md  CHANGELOG  CMakeLists.txt  CONTRIBUTORS  Doxyfile  KNOWN-ISSUES  LICENSE  Makefile  Makefile_tidsp  README  README-AMD.md  README.md  bootstrap  cmake.config.h.in  configure  configure.ac  configure.ac.old  configure_tidsp  generate_code_coverage_html.sh  libflame.pc.in  script_aoclutil.sh  so_version
netlib-test/windows_netlib_test/INSTALL/: CMakeLists.txt
old/testcpp/src/: CMakeLists.txt  libflame_bdsqr.cc  libflame_gebd2.cc  libflame_gebrd.cc  libflame_gelq2.cc  libflame_gelqf.cc  libflame_gelsd.cc  libflame_gelss.cc  libflame_geqp3.cc  libflame_geqpf.cc  libflame_geqr2.cc  libflame_geqrf.cc  libflame_gesdd.cc  libflame_gesvd.cc  libflame_getf2.cc  libflame_getrf.cc  libflame_heevr.cc  libflame_hegs2.cc  libflame_hegst.cc  libflame_hetd2.cc  libflame_larfg.cc  libflame_larfgp.cc  libflame_laset.cc  libflame_lauum.cc  libflame_orgbr.cc  libflame_orglq.cc  libflame_orgqr.cc  libflame_ormbr.cc  libflame_potrf.cc  libflame_stedc.cc  libflame_stemr.cc  libflame_syev.cc  libflame_test.cc  libflame_ungbr.cc  libflame_unglq.cc  libflame_ungqr.cc  libflame_ungtr.cc  libflame_unmbr.cc  libflame_unml2.cc  libflame_unmlq.cc  (+1 more)
performance_test/: CMakeLists.txt  Flame_gbench_aux.cc  Flame_gbench_aux.h  Flame_gbench_main.cc  Flame_gbench_main.h  GBench_Flame.inc  Makefile  ReadMe.txt  make.inc
performance_test/EIG/: Flame_gbench_geev.cc  Flame_gbench_geevx.cc  Flame_gbench_gehrd.cc  Flame_gbench_ggev.cc  Flame_gbench_heevd.cc  Flame_gbench_hseqr.cc  Flame_gbench_orghr.cc  Flame_gbench_syevd.cc  Flame_gbench_sygvd.cc  Flame_gbench_unghr.cc
performance_test/LIN/: Flame_gbench_gecon.cc  Flame_gbench_geqr.cc  Flame_gbench_geqrf.cc  Flame_gbench_getrf.cc  Flame_gbench_getrs.cc  Flame_gbench_pocon.cc  Flame_gbench_potrf.cc
performance_test/SVD/: Flame_gbench_gesdd.cc  Flame_gbench_gesvd.cc
src/base/flamec/: CMakeLists.txt
src/map/lapack2flamec/: CMakeLists.txt  FLA_bdsqr.c  FLA_gebrd.c  FLA_gehrd.c  FLA_gelqf.c  FLA_gelsd.c  FLA_geqpf.c  FLA_geqrf.c  FLA_gesdd.c  FLA_gesvd.c  FLA_getrf.c  FLA_getrfnp.c  FLA_getrfnpi.c  FLA_hegst.c  FLA_hetrd.c  FLA_lapack2flame_prototypes.h  FLA_lapack2flame_return_defs.h  FLA_lapack2flame_util.c  FLA_lapack2flame_util_defs.h  FLA_larfg.c  FLA_lauum.c  FLA_orgbr.c  FLA_orglq.c  FLA_orgqr.c  FLA_orgtr.c  FLA_ormbr.c  FLA_ormlq.c  FLA_ormqr.c  FLA_ormtr.c  FLA_potrf.c  FLA_potri.c  FLA_spffrt2.c  FLA_spffrtx.c  FLA_trsyl.c  FLA_trtri.c  README  not_yet_lapack2flame.sh
test/: CMakeLists.txt  Makefile  check-flametest.sh  input.global.general  input.global.operations
test/aoclflaprogress/: CMakeLists.txt  Makefile  README.txt  input.global.general
test/aoclflaprogress/src/: CMakeLists.txt  test_aocl_progress.h  test_aocl_progress_getrf.c
test/example/: CMakeLists.txt  ReadMe.txt  sample_dgetrf.c
test/gtestcpp/: Makefile  ReadMe.txt
test/gtestcpp/src/: libflame_gecon.cc  libflame_geqp3.cc  libflame_geqrf.cc  libflame_getrf.cc  libflame_getri.cc  libflame_getrs.cc  libflame_hbev.cc  libflame_hbev_2stage.cc  libflame_hbevd.cc  libflame_hbevd_2stage.cc  libflame_hbevx.cc  libflame_hbevx_2stage.cc  libflame_hbgst.cc  libflame_hbgv.cc  libflame_hbgvd.cc  libflame_hbgvx.cc  libflame_hbtrd.cc  libflame_heequb.cc  libflame_heev.cc  libflame_heev_2stage.cc  libflame_heevd.cc  libflame_heevd_2stage.cc  libflame_heevr.cc  libflame_heevr_2stage.cc  libflame_heevx.cc  libflame_heevx_2stage.cc  libflame_hegs2.cc  libflame_hegst.cc  libflame_hegv.cc  libflame_hegv_2stage.cc  libflame_hegvd.cc  libflame_hegvx.cc  libflame_hesv.cc  libflame_hesv_aa.cc  libflame_hesv_aa_2stage.cc  libflame_hesv_rk.cc  libflame_hesv_rook.cc  libflame_heswapr.cc  libflame_hetd2.cc  libflame_hetf2.cc  (+16 more)
test/lapacke/: CMakeLists.txt  Makefile  ReadMe.txt  lapacke_gtest_helper.h  lapacke_gtest_main.h
test/lapacke/EIG/: lapacke_gtest_bbcsd.cc
test/lapacke/LIN/: lapacke_gtest_gbcon.cc  lapacke_gtest_gbsv.cc  lapacke_gtest_gbtrf.cc  lapacke_gtest_gecon.cc  lapacke_gtest_getrf.cc  lapacke_gtest_getri.cc  lapacke_gtest_gtcon.cc  lapacke_gtest_gtsv.cc  lapacke_gtest_hecon.cc  lapacke_gtest_hecon_3.cc  lapacke_gtest_hesv.cc  lapacke_gtest_hesv_aa.cc  lapacke_gtest_hetrf.cc  lapacke_gtest_hetrf_aa.cc  lapacke_gtest_hetrf_aa_2stage.cc  lapacke_gtest_hetrf_rook.cc  lapacke_gtest_hetri2x.cc  lapacke_gtest_hetri_3.cc  lapacke_gtest_hetrs.cc  lapacke_gtest_hetrs_3.cc  lapacke_gtest_hetrs_rook.cc  lapacke_gtest_hpcon.cc  (+32 more)
test/lapacke_test/: CMakeLists.txt  GT_LPKE.inc  Makefile  ReadMe.txt  lapacke_gtest_aux.c  lapacke_gtest_aux.h  lapacke_gtest_helper.c  lapacke_gtest_helper.h  lapacke_gtest_main.cc  make.inc
test/legacyflame/: CMakeLists.txt  Makefile
test/main/: CMakeLists.txt  Makefile  ReadMe.txt  check-flametest.sh  input.global.general  input.global.operations  main_ctest.cmake  negative_test.cmake  run_tests_from_dtl_logs.py
test/src/: CMakeLists.txt  test_apcaqutinc.c  test_apcaqutinc.h  test_apqudut.c  test_apqudut.h  test_apqudutinc.c  test_apqudutinc.h  test_apqut.c  test_apqut.h  test_apqutinc.c  test_apqutinc.h  test_bidiagut.c  test_bidiagut.h  test_caqrutinc.c  test_caqrutinc.h  test_chol.c  test_chol.h  test_common.c  test_common.h  test_eig_gest.c  test_eig_gest.h  test_gemm.c  test_gemm.h  test_hemm.c  test_hemm.h  test_her2k.c  test_her2k.h  test_herk.c  test_herk.h  test_hessut.c  test_hessut.h  test_ldlt2_nopiv_ps.c  test_ldlt2_nopiv_ps.h  test_ldltx_nopiv_ps.c  test_ldltx_nopiv_ps.h  test_libflame.c  test_libflame.h  test_lqut.c  test_lqut.h  test_lu_incpiv.c  (+35 more)
test/validate_src/: CMakeLists.txt  test_common.c  test_common.h  test_prototype.h  validate_common.h  validate_geev.c  validate_geevx.c  validate_geqp3.c  validate_geqrf.c  validate_gerq2.c  validate_gerqf.c  validate_gesdd.c  validate_gesv.c  validate_gesvd.c  validate_getrf.c  validate_getri.c  validate_getrs.c  validate_ggev.c  validate_ggevx.c  validate_orgqr.c  validate_potrf.c  validate_potrs.c  validate_stedc.c  validate_syevd.c
test/windows/: Makefile
(+9683 files in other folders)
